[gd_scene load_steps=9 format=2]

[ext_resource path="res://entities/player/player_gui.gd" type="Script" id=1]
[ext_resource path="res://items/Pages/page_hud_texture.jpeg" type="Texture" id=2]
[ext_resource path="res://shaders/Vignette/vignette.gdshader" type="Shader" id=3]

[sub_resource type="ShaderMaterial" id=5]
shader = ExtResource( 3 )
shader_param/vignette_intensity = 0.4
shader_param/vignette_opacity = 1.0
shader_param/vignette_rgb = Color( 0, 0, 0, 1 )

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:material:shader_param/vignette_intensity")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:material:shader_param/vignette_opacity")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ColorRect:material:shader_param/vignette_rgb")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("game_over:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("prompt_game_over:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=7]
resource_name = "blick_hurt"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:material:shader_param/vignette_rgb")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ false ],
"method": "set_hurt"
} ]
}

[sub_resource type="Animation" id=8]
resource_name = "dead"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:material:shader_param/vignette_rgb")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:material:shader_param/vignette_intensity")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.4, 2.945 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ColorRect:material:shader_param/vignette_opacity")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.5, 1.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("game_over:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("game_over:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("prompt_game_over:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Theme" id=3]

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Vignette" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="Vignette"]
material = SubResource( 5 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="vignette_anim" type="AnimationPlayer" parent="Vignette"]
anims/RESET = SubResource( 6 )
anims/blick_hurt = SubResource( 7 )
anims/dead = SubResource( 8 )

[node name="game_over" type="Label" parent="Vignette"]
modulate = Color( 1, 1, 1, 0 )
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -7.0
margin_bottom = 7.0
text = "Você morreu"
align = 1

[node name="prompt_game_over" type="Label" parent="Vignette"]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -14.0
text = "Aperte F1 para recomeçar"
align = 1

[node name="GunsParts" type="Label" parent="."]
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 48.0
margin_right = 80.0
margin_bottom = -86.0
text = "Partes: 0/4"

[node name="StaminaBar" type="ProgressBar" parent="."]
margin_left = 64.0
margin_top = 536.0
margin_right = 256.0
margin_bottom = 566.0
theme = SubResource( 3 )
rounded = true
percent_visible = false

[node name="ActionBar" type="ProgressBar" parent="."]
visible = false
anchor_left = 0.437
anchor_top = 0.488
anchor_right = 0.562
anchor_bottom = 0.512
margin_left = 0.511993
margin_top = 0.199982
margin_right = 0.511963
margin_bottom = -0.200012
percent_visible = false

[node name="Interaction" type="Label" parent="ActionBar"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Interaction"
align = 1

[node name="StaminaLabel" type="RichTextLabel" parent="."]
margin_left = 136.0
margin_top = 544.0
margin_right = 192.0
margin_bottom = 560.0
focus_mode = 2
text = "Stamina"
selection_enabled = true

[node name="Prompt" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -15.5
margin_bottom = 15.5
text = "Message
{Key}"
align = 1

[node name="Page" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PageTexture" type="TextureRect" parent="Page"]
anchor_left = 0.312
anchor_right = 0.687
anchor_bottom = 1.0
margin_left = 0.511993
margin_right = 0.511963
texture = ExtResource( 2 )
expand = true

[node name="PageText" type="RichTextLabel" parent="Page"]
anchor_left = 0.375
anchor_top = 0.107
anchor_right = 0.625
anchor_bottom = 0.853
margin_left = -3.05176e-05
margin_top = -0.200005
margin_bottom = 0.199982
text = "Text"

[node name="Label" type="Label" parent="Page"]
anchor_top = 0.933
anchor_right = 1.0
anchor_bottom = 0.973
margin_top = 0.200012
margin_bottom = 0.199951
text = "Aperte \"E\" para sair"
align = 1
